
o Made the first letter of each main menu title from a guide into an
  accelerator key. This could cause clashes with other accelerator keys but,
  if someone is trying to use just the keyboard, they're probably more
  interested in getting at the guide's menu that any of the other menus.

o The bookmark manager now makes a better guess at a default title for a
  bookmark.

Changes since v2.5
==================

o The global finder now tells you -- in the status bar and as a hint -- the
  name of the guide that a hit was found in.

o WEG now remembers if the guide manager, bookmarks manager or the global
  finder windows were open and when you next run WEG opens them for you.

Changes since v2.4
==================

o Changed printing support so that it only prints selected text if there is
  a selection available.

Changes since v2.3
==================

o Added a "right-click" menu to the bookmarks window.

o Added printing support.

o Added support for many of the keystrokes that were supported by the DOS,
  GNU/Linux and OS/2 versions of EG. This support was also in WEG 1.x and
  I'd forgotten to add it to WEG 2.x.

Changes since v2.2
==================

o Removed the maximise and minimise buttons from the guide credits dialog.

o Added bookmarks.

o Added an extra check when loading a guide on startup that ensures that the
  entry we're supposed to be loading is still valid. This fixes a bug
  reported by Martin Verheij.

Changes since v2.1
==================

Built against v1.2 of WEGLib.

Changes since v2.0
==================

Built against v1.1 of WEGLib.

Changes since v1.0.15
=====================

WEG 2.0 is a ground-up re-write of WEG, as such everything has changed. Some
of the more significant changes since WEG v1.0.15 are:

o Large parts of WEG are now implemented in a library for Delphi called
  WEGLib. If you're so inclined you can use WEGLib to develop your own
  Norton Guide reader (be sure to understand the licence before you do).
